--- a/periodiCal/package.json
+++ b/periodiCal/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "npx drizzle-kit generate && expo start --android",
+    "ios": "npx drizzle-kit generate && expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -34,6 +34,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -41,12 +42,22 @@
     "react-native-worklets": "0.5.1",
     "uuid": "^13.0.0"
   },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
     "babel-plugin-inline-import": "^3.0.0",
+    "better-sqlite3": "^12.5.0",
     "drizzle-kit": "^0.31.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.16",
+    "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true
